# quantum_diffusion

./: README.md  pyproject.toml
examples/: test_harmonic_oscillator_imaginary_time.py  test_harmonic_oscillator_real_time.py
src/quantum_diffusion/: __init__.py
src/quantum_diffusion/core/: __init__.py  diffusion_sde.py  fokker_planck.py  quantum_operators.py
src/quantum_diffusion/models/: __init__.py  quantum_diffuser.py  unet_1d.py
src/quantum_diffusion/simulate/: __init__.py  simulate_imaginary_time.py  simulate_real_time.py
src/quantum_diffusion/systems/: __init__.py  base_system.py  harmonic_oscillator.py
src/quantum_diffusion/train/: __init__.py  train_imaginary_time.py  train_real_time.py
src/quantum_diffusion/utils/: __init__.py  data_generator.py  metrics.py  visualization.py
