[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum_diffusion"
version = "0.1.0"
authors = [
  { name="Quantum AI Lab", email="quantum_ai@example.com" }
]
description = "Diffusion-based quantum phase space dynamics simulation for 1D quantum systems"
long_description = file: "README.md"
long_description_content_type = "text/markdown"
keywords = ["quantum mechanics", "diffusion models", "phase space", "harmonic oscillator"]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Machine Learning"
]
requires-python = ">=3.9"
dependencies = [
  # 核心依赖
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "torchaudio>=2.0.0",
  # Diffusion框架
  "diffusers>=0.24.0",
  # 数值计算
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  # 可视化
  "matplotlib>=3.7.0",
  # 可选：加速计算
  "numba>=0.57.0 ; extra == 'accelerate'",
  # 可选：分布式训练
  "torchdistx>=0.1.0 ; extra == 'distributed'"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.3.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.3.0"
]
accelerate = [
  "numba>=0.57.0",
  "cupy>=12.0.0 ; platform_system != 'Windows'"
]
distributed = [
  "torchdistx>=0.1.0",
  "mpi4py>=3.1.4"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantum_diffusion*"]
